Added aspects for logging

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -3,3 +3,4 @@ fsi.sandbox.reset.url=${fsi.sandbox.base.url}/bvnr/Reset
 fsi.sandbox.get.singlebvn.url=${fsi.sandbox.base.url}/bvnr/GetSingleBVN
 sandbox.key=96fb695cd2cef7fa5f620af44eaeacaa
 sandbox.organization.code=11111
+logging.level.org.apache.http=DEBUG
