Logged Encrypted with aspects

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,6 +1,10 @@
-fsi.sandbox.base.url=https://sandboxapi.fsi.ng/nibss
-fsi.sandbox.reset.url=${fsi.sandbox.base.url}/bvnr/Reset
-fsi.sandbox.get.singlebvn.url=${fsi.sandbox.base.url}/bvnr/GetSingleBVN
-sandbox.key=96fb695cd2cef7fa5f620af44eaeacaa
+fsi.sandbox.base.url=https://sandboxapi.fsi.ng
+fsi.sandbox.reset.url=${fsi.sandbox.base.url}/nibss/bvnr/Reset
+fsi.sandbox.get.singlebvn.url=${fsi.sandbox.base.url}/nibss/bvnr/GetSingleBVN
+fsi.sandbox.verify.singlebvn.url=${fsi.sandbox.base.url}/nibss/bvnr/VerifySingleBVN
+fsi.sandbox.is.bvn.watchlisted.url=${fsi.sandbox.base.url}/nibss/bvnr/IsBVNWatchlisted
+fsi.sandbox.get.multiplebvn.url=${fsi.sandbox.base.url}/nibss/bvnr/GetMultipleBVN
+fsi.sandbox.verify.multiplebvn.url=${fsi.sandbox.base.url}/nibss/bvnr/VerifyMultipleBVN
+sandbox.key=xxxxx
 sandbox.organization.code=11111
 logging.level.org.apache.http=DEBUG
