Logged Encrypted with aspects

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -5,6 +5,6 @@ fsi.sandbox.verify.singlebvn.url=${fsi.sandbox.base.url}/nibss/bvnr/VerifySingle
 fsi.sandbox.is.bvn.watchlisted.url=${fsi.sandbox.base.url}/nibss/bvnr/IsBVNWatchlisted
 fsi.sandbox.get.multiplebvn.url=${fsi.sandbox.base.url}/nibss/bvnr/GetMultipleBVN
 fsi.sandbox.verify.multiplebvn.url=${fsi.sandbox.base.url}/nibss/bvnr/VerifyMultipleBVN
-sandbox.key=xxxxx
+sandbox.key=****
 sandbox.organization.code=11111
 logging.level.org.apache.http=DEBUG
